[package]
name = "isis-packet"
version = "0.5.1"
description = "Parser for the IS-IS protocol"
license = "MIT/Apache-2.0"
keywords = ["IS-IS","routing","protocol","parser","nom"]
homepage = "https://github.com/zebra-rs/isis-packet"
repository = "https://github.com/zebra-rs/isis-packet.git"
authors = ["Kunihiro Ishiguro <kunihiro@zebra.dev>"]
categories = ["parser-implementations"]
readme = "README.md"
edition = "2024"

include = [
  "LICENSE-*",
  "README.md",
  ".gitignore",
  "Cargo.toml",
  "src/*.rs",
  "tests/*.rs",
]

[dependencies]
bitfield-struct = "0.9"
byteorder = "1.5"
bytes = "1.9"
hex = "0.4.3"
ipnet = "2.10"
nom = "7"
nom-derive = "0.10"

[dev-dependencies]
hex-literal = "0.3"
